k8s/commands-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-deployment
  labels:
    app: commands-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commands-api
  template:
    metadata:
      labels:
        app: commands-api
    spec:
      containers:
        - name: commands-api
          image: devder/command-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
  labels:
    app: commands-api
spec:
  selector:
    app: commands-api
  ports:
    - name: commands-api
      protocol: TCP
      port: 80
      targetPort: http
