k8s/mssql-platforms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-platforms-deployment
  labels:
    app: mssql-platforms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-platforms
  template:
    metadata:
      labels:
        app: mssql-platforms
    spec:
      containers:
        - name: mssql-platforms
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssqldb
              mountPath: /var/opt/mssql/data
      volumes:
        - name: mssqldb
          persistentVolumeClaim:
            claimName: mssql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-srv
  labels:
    app: mssql-platforms
spec:
  selector:
    app: mssql-platforms
  ports:
    - name: mssql-platforms
      protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-lb-srv
  labels:
    app: mssql-platforms
spec:
  type: LoadBalancer
  selector:
    app: mssql-platforms
  ports:
    - name: mssql-platforms
      protocol: TCP
      port: 1433
      targetPort: 1433
