k8s/platforms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-deployment
  labels:
    app: platforms-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platforms-api
  template:
    metadata:
      labels:
        app: platforms-api
    spec:
      containers:
        - name: platforms-api
          image: devder/platform-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9090
              name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
  labels:
    app: platforms-api
spec:
  selector:
    app: platforms-api
  ports:
    - name: platforms-api
      protocol: TCP
      port: 80
      targetPort: http
    - name: platforms-grpc
      protocol: TCP
      port: 90
      targetPort: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-service
  labels:
    app: platforms-api
spec:
  type: NodePort
  selector:
    app: platforms-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
