k8s/platforms-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: platforms-service
  labels:
    app: platforms-api
spec:
  type: NodePort
  selector:
    app: platforms-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
