k8s/rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 15672
              name: rbmq-mgmt-port
            - containerPort: 5672
              name: rbmq-msg-port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-srv
  labels:
    app: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - name: rbmq-mgmt-srv
      protocol: TCP
      port: 15672
      targetPort: rbmq-mgmt-port
    - name: rbmq-msg-srv
      protocol: TCP
      port: 5672
      targetPort: rbmq-msg-port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-lb-srv
  labels:
    app: rabbitmq
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
    - name: rbmq-mgmt-srv
      protocol: TCP
      port: 15672
      targetPort: rbmq-mgmt-port
    - name: rbmq-msg-srv
      protocol: TCP
      port: 5672
      targetPort: rbmq-msg-port
